--- a/src/index.css
+++ b/src/index.css
@@ -3,81 +3,86 @@
 @tailwind utilities;
 
 @layer utilities {
-	.carousel {
-		width: calc(100vw * var(--dynamic-length));
-		flex-direction: row;
-		display: flex;
-		height: 100%;
-	}
+  .carousel {
+    width: calc(100vw * var(--dynamic-length));
+    flex-direction: row;
+    display: flex;
+    height: 100%;
+  }
 
-	.carousel-item {
-		background-image: var(--dynamic-path);
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: center;
-		width: 100%;
-		height: 100%;
-	}
-
-	.navigation {
-		position: absolute;
-		top: 50%;
-		left: 56%;
-		transform: translate(-50%, -50%);
-		-webkit-transform: translate(-50%, -50%);
-		-moz-transform: translate(-50%, -50%);
-		-ms-transform: translate(-50%, -50%);
-		-o-transform: translate(-50%, -50%);
-}
-}
-
-* {
-	box-sizing: border-box;
-}
-
-:root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
-	font-weight: 400;
-
-	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
-
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
-}
-
-body {
-	margin: 0;
-	padding: 0;
-}
-
-#root {
-	margin: 0;
-	min-width: 320px;
-	min-height: 100vh;
-}
-
-#hero {
-	position: relative;
-	width: 100vw;
-	height: 100vh;
-	margin: 0;
-	padding: 0;
-	text-align: center;
-	overflow: hidden;
-	scroll-snap-align: center;
-}
-
-/* .carousel-item {
+  .carousel-item {
     background-image: var(--dynamic-path);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
     height: 100%;
-} */
+  }
+
+  .navigation {
+    min-height: 200px;
+    position: absolute;
+    top: 50%;
+    left: 56%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+  overflow-x: hidden;
+  background-color: white;
+}
+
+#hero {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  overflow: hidden;
+  scroll-snap-align: center;
+}
+
+#about {
+  color: #111111;
+}
+
+@media (max-width: 1535px) {
+  .navigation {
+    top: 370px;
+    left: 100px;
+  }
+}
